# port-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: CODEOWNERS
.github/workflows/: docker-hub-publish.yml  docker-images-security-scan.yml  docker-publish.yml  python-app.yml  release.yaml  version-bump.yml
app/: control_the_payload_config.json  main.py  port_client.py  utils.py
app/clients/: port.py
app/consumers/: http_polling_consumer.py  https_consumer.py  kafka_consumer.py
app/core/: config.py  consts.py
app/invokers/: base_invoker.py  gitlab_pipeline_invoker.py  webhook_invoker.py
app/processors/https/: https_to_webhook_processor.py
app/processors/kafka/: kafka_to_gitlab_processor.py  kafka_to_webhook_processor.py
app/processors/polling/: polling_to_webhook_processor.py
app/streamers/: base_streamer.py  streamer_factory.py
app/streamers/https/: __init__.py  https_streamer.py
app/streamers/kafka/: base_kafka_streamer.py  kafka_streamer.py  kafka_to_gitlab_processor.py  kafka_to_gitlab_streamer.py  kafka_to_webhook_streamer.py
app/streamers/polling/: __init__.py  polling_streamer.py
scripts/: format.sh  init.sh  lint.sh  sync_ca_certs.sh  test.sh
tests/unit/core/: test_config.py
tests/unit/invokers/: test_webhook_invoker.py
tests/unit/processors/https/: test_https_to_webhook_processor.py
tests/unit/processors/kafka/: conftest.py  test_kafka_to_gitlab_processor.py  test_kafka_to_webhook_processor.py
tests/unit/processors/polling/: test_polling_to_webhook_processor.py
tests/unit/streamers/https/: conftest.py  test_https_consumer.py  test_https_streamer.py
tests/unit/streamers/kafka/: conftest.py  test_kafka_streamer.py  test_kafka_to_gitlab_processor.py  test_kafka_to_gitlab_streamer.py  test_kafka_to_webhook_processor.py  test_kafka_to_webhook_streamer.py
tests/unit/streamers/polling/: conftest.py  test_http_polling_consumer.py  test_https_consumer.py  test_polling_streamer.py
