[tool.poetry]
name = "port-agent"
version = "0.1.0"
description = ""
authors = ["tankilevitch <tomtankilevitch@gmail.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = ">=2.1.1,<2.2.0"
pydantic = ">=1.10.2,<1.11.0"
pyjq = ">=2.6.0,<2.7.0"
flatten-dict = ">=0.4.2,<0.5.0"
requests = "^2.32.3"
setuptools = ">=78.1.1"
python-dotenv = "^1.0.1"
pycryptodome = "^3.23.0"
glom = "^24.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.12.0"
pytest-cov = "^6.0.0"
mypy = "^0.991"
types-requests = "^2.28.11.5"
isort = "^5.10.1"
autoflake = "^1.7.7"
black = "^24.3.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
